# svg_removeoverlap

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  QUICKSTART.md  README.md  TODO.md  llms.txt  mypy.ini  setup.cfg  setup.py  svg_removeoverlap.spec  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.md
scripts/: build.sh  release.sh  test.sh
src/: svg_removeoverlap.txt
src/svg_removeoverlap/: __main__.py  remover.py  remover_cairo_skia.py  remover_skia.py
tests/: conftest.py  test_build_system.py  test_cli.py  test_integration.py  test_remover.py  test_version.py
