# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = svg_removeoverlap
description = CLI tool & Python lib to remove overlap in SVG
author = Adam Twardoch
author_email = adam+github@twardoch.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/twardoch/svg_removeoverlap
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/twardoch/svg_removeoverlap
    Source = https://github.com/twardoch/svg_removeoverlap
    Changelog = https://github.com/twardoch/svg_removeoverlap/blob/main/CHANGELOG.md
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    CairoSVG>=2.7.1
    fire>=0.5.0
    lxml>=5.1.0
    picosvg>=0.20.6
    tinycss2>=1.2.1
    tqdm>=4.66.2


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install svg_removeoverlap[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools>=69.0.0
    pytest>=8.0.0
    pytest-cov>=4.1.0
    mypy>=1.9.0
    lxml-stubs>=0.5.1 # For better type checking with lxml
    # Consider adding lxml-stubs if mypy has trouble with lxml

[options.entry_points]
# Add here console scripts like:
console_scripts =
     svg_removeoverlap = svg_removeoverlap.__main__:cli
# For example:
# console_scripts =
#     fibonacci = svg_removeoverlap.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.4
package = svg_removeoverlap
extensions =
    github_actions
    markdown
    no_skeleton
    no_tox
    pre_commit
